# Quick-Maths-python

./: .gitignore  Constants.py  InfoandSystem.py  Maths.py  PandE.py  Pipfile  README.md  bessel.csv  graphing.py  helper.py  pyproject.toml  requirements.txt  unitConversion.py
.github/workflows/: pylint.yml  python-app.yml
Examples/EngineeringMaths/: graph_error.py
Examples/InfoandSystem/: NoiseExampleSheet.py
Examples/year_2/ecc/: losses_example.py
docs/: .gitignore  api.rst  conf.py  index.rst
examples/year_1/ena/: graph_error.py
examples/year_1/ins/: noise_example_sheet.py
examples/year_1/pwe/: magnetism.py
examples/year_2/ecc/: losses_example.py
src/eeepy/: __init__.py
src/eeepy/utils/: Constants.py  __init__.py  constants.py  helper.py  unitConversion.py  units.py
src/eeepy/year_1/: __init__.py
src/eeepy/year_1/InfoandSystem/: __init__.py
src/eeepy/year_1/ena/: __init__.py
src/eeepy/year_1/ins/: __init__.py  graphing.py
src/eeepy/year_1/pae/: __init__.py
src/eeepy/year_1/pwe/: __init__.py  electrical_machines.py  magnetism.py  renewable_energy.py
src/eeepy/year_2/ecc/: dc_machine.py  electrical_machines.py  flyback_converter.py  forward_converters.py  induction_machine.py  magnetic_circuits.py  magnetic_materials.py  power_devices_losses.py  power_electronics.py  renewable_energy.py  synchronous_machine.py
src/eeepy/year_2/epc/: adc.py  bjt_amplifiers.py  oscillators.py
src/eeepy/year_2/mmt/: __init__.py  coordinate_system.py  dft.py  numerical_integration.py
src/quick_maths/year_2/ecc/: __init__.py  power_supply.py
src/quick_maths/year_2/epc/: adc.py
tests/year_1/pwe/: test_magnetism.py
tests/year_2/ecc/: test_dc_machine.py  test_magnetic_circuits.py  test_magnetic_materials.py  test_power_devices_losses.py
tests/year_2/epc/: test_bjt_amplifiers.py
tests/year_2/mmt/: test_coordinate_system.py  test_dft.py
(+5 files in other folders)
