[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeepy"
description = """A module that provides functions and classes to calculate Electrical and
Electronic circuits and values."""
readme = "README.md"
license = { text = "MIT LICENSE" }
requires-python = ">=3.10"
dependencies = ["matplotlib", "numpy", "pint"]
dynamic = ["version"]
authors = [
    { name = "ecyht2", email = "ecyht2@nottingham.edu.my" }
]

[project.optional-dependencies]
"dev" = ["pytest", "python-lsp-server", "pylsp-mypy", "python-lsp-ruff"]

[project.urls]
"Homepage" = "https://github.com/ecyht2/quick-maths"

[tool.setuptools.dynamic]
version = { attr = "eeepy.__version__" }

[tool.pylint.'MESSAGES CONTROL']
disable = "invalid-name, too-many-arguments"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.mypy]
check_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
